show interactive in iframe

--- a/_dev/html/components/src.html
+++ b/_dev/html/components/src.html
@@ -1,5 +1,6 @@
 <link href="css/video-js.min.css" rel="stylesheet">
 <link rel="stylesheet" href="css/style.css" />
+<!--<link rel="stylesheet" href="css/style.min.css">-->
 <script src="js/lib/pack/0underscore.min.js"></script>
 <script src="js/lib/pack/backbone.min.js"></script>
 <script src="js/lib/pack/event.js"></script>
