--- a/_dev/scss/components/_video.scss
+++ b/_dev/scss/components/_video.scss
@@ -10,11 +10,15 @@
     $m-top:-10rem;
     $shift:.75*1.66rem;
     color:$lbrn;
+    opacity:0;
     &.vjs-has-started.vjs-user-inactive.vjs-playing .shadow{
       opacity:0;
     }
     .nope &{
       pointer-events:none;
+    }
+    .loaded &{
+      opacity:1;
     }
     video{
       outline :none;
@@ -52,14 +56,7 @@
       color:#fff;
       font-size:1.66em;
       width:auto;
-      @include abs($l:0,$b:1.7rem);
-    }
-    .rem{
-      color:#fff;
-      font-size:1.66em;
-      font-family:font1();
-      width:auto;
-      @include abs($r:0,$b:1.7rem);
+      @include abs($l:0,$b:4.7rem);
     }
     .vjs-big-play-button{
       display:none;//
@@ -242,9 +239,12 @@
       //text-shadow:0 6px 0 $brn;
       &.vjs-progress-control{
         pointer-events:none;//TODO:uncomment
-        @include abs($l:0,$r:0,$b:0);
+        @include abs($l:0,$r:0,$b:3rem);
         width:auto;
         height:auto;
+        @include med(){
+          bottom:0;
+        }
         &:hover{
           .vjs-progress-holder,.vjs-time-tooltip{
             font-size:1em;
@@ -258,10 +258,14 @@
         text-shadow:none;
         display:none;
         &.vjs-remaining-time{
-          //display:block;
+          line-height:inherit;
+          padding:0;
+          display:block;
           color:#fff;
-          font-size:1.5em;
-          @include abs($r:3em,$t:-3.5em);
+          font-size:1.66em;
+          font-family:font1();
+          width:auto;
+          @include abs($r:0,$b:4.7rem);
         }
       }
       &.vjs-menu-button-popup .vjs-icon-placeholder{
@@ -328,7 +332,7 @@
       font-style: normal;
       &:before{
         content:'';
-        background-image: url(#{$path}/player/icon-settings.svg);
+        background-image: url(#{$path}player/icon-settings.svg);
       }
     }
   }
