--- a/_dev/scss/components/_main.scss
+++ b/_dev/scss/components/_main.scss
@@ -313,6 +313,9 @@
       opacity:1;
       visibility:visible;
     }
+    .inter &{
+      display:none;
+    }
     .bg{
       position:absolute;
       width:100%;
